--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,9 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.4",
+    "@reduxjs/toolkit": "^1.6.1",
+    "@types/react-redux": "^7.1.18",
+    "@types/redux": "^3.6.0",
+    "antd": "^4.16.13",
+    "axios": "^0.21.4",
+    "chart.js": "^3.5.1",
     "cra-template-typescript": "1.1.2",
+    "html-react-parser": "^1.3.0",
+    "millify": "^4.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3"
   },
   "scripts": {
@@ -31,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.9",
+    "react-router-dom": "^5.3.0"
   }
 }
